fix: 결제 보상/확정 멱등성 보장 및 운영 안정성 개선
  - 보상(executeCompensation) 멱등성 가드: FAILED/APPROVED 상태 스킵
  - 확정(confirmPayment) 멱등성 가드: APPROVED 상태 스킵
  - Thread.sleep(500ms) 제거: 요청 스레드 블로킹 방지
  - 대사 배치 pgTxnId null + 30분 상한: PG 미접수 결제 영구 미결 방지
  - 콜백 DTO 필수 필드 검증 + 미사용 필드 제거
  - 하드코딩 카드번호 → 요청 파라미터 수신
  - 배치 쿼리 페이징(limit 100) 도입
  - 테스트 catch(Exception) → 구체 예외 타입 좁히기